--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -14,8 +14,10 @@
     "@syncfusion/ej2-react-richtexteditor": "^19.4.50",
     "@syncfusion/ej2-react-schedule": "^19.4.50",
     "axios": "^1.6.2",
+    "chart.js": "^4.4.1",
     "install": "^0.13.0",
     "react": "^17.0.2",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-redux": "^9.0.4",
