--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -20,11 +20,8 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
-    "react-redux": "^9.0.4",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "^5.0.1",
-    "redux": "^5.0.0",
-    "redux-thunk": "^3.1.0"
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
